--- a/package.json
+++ b/package.json
@@ -1,3 +1,7 @@
 {
-    "workspaces": ["logic", "server", "client"]
+    "workspaces": [
+        "logic",
+        "server",
+        "client"
+    ]
 }
