--- a/client/package.json
+++ b/client/package.json
@@ -10,6 +10,7 @@
     "@types/node": "^17.0.8",
     "@types/react": "^17.0.38",
     "@types/react-dom": "^17.0.11",
+    "boardgame.io": "^0.49.9",
     "konva": "^8.3.2",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
