workspaces failin me

--- a/logic/package.json
+++ b/logic/package.json
@@ -1,6 +1,7 @@
 {
-  "name": "capsaicin-logic",
+  "name": "logic",
   "version": "1.0.0",
+  "private": true,
   "description": "Game rules for Capsaicin",
   "main": "index.js",
   "scripts": {
