--- a/client/package.json
+++ b/client/package.json
@@ -17,7 +17,8 @@
     "react-konva": "^17.0.2-5",
     "react-scripts": "5.0.0",
     "typescript": "^4.5.4",
-    "web-vitals": "^2.1.2"
+    "web-vitals": "^2.1.2",
+    "logic": "latest"
   },
   "scripts": {
     "start": "react-scripts start",
@@ -44,6 +45,5 @@
     ]
   },
   "devDependencies": {
-    "@types/styled-components": "^5.1.19"
   }
 }
