--- a/client/package.json
+++ b/client/package.json
@@ -12,13 +12,13 @@
     "@types/react-dom": "^17.0.11",
     "boardgame.io": "^0.49.9",
     "konva": "^8.3.2",
+    "logic": "latest",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-konva": "^17.0.2-5",
     "react-scripts": "5.0.0",
     "typescript": "^4.5.4",
-    "web-vitals": "^2.1.2",
-    "logic": "latest"
+    "web-vitals": "^2.1.2"
   },
   "scripts": {
     "start": "react-scripts start",
@@ -44,6 +44,5 @@
       "last 1 safari version"
     ]
   },
-  "devDependencies": {
-  }
+  "devDependencies": {}
 }
